fixed nav padding on mobile display

--- a/responsive.css
+++ b/responsive.css
@@ -99,11 +99,13 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* flex-wrap: wrap; */
     align-items: center;
   }
 }
 @media screen and (max-width: 600px) {
+  nav{
+    padding: 0 10px;
+  }
   .nav-links {
     position: absolute;
     height: 250px;
